@@ -65,6 +65,7 @@
 	* Added a hook to provide additional documents when indexing Index Queue items
 	* Added API for retrieving a domain's sitehash, credits Stefan Sprenger
 	* Added feature #33335: Support for more relation types in SOLR_RELATION, credits Dominique Feyer
+	* Fixed an issue where editing or creating a localized record would update/add the localization in the Index Queue instead of the original language record
 
 2012-02-13  Ingo Renner  <ingo.renner@dkd.de>
 
